# PokemonRedExperiments

./: .gitignore
baselines/: requirements.txt  run_pretrained_interactive.py  stream_agent_wrapper.py
v2/: baseline_fast_v2.py  global_map.py  local.py  pyproject.toml  red_gym_env_v2.py  requirements.txt  run_pretrained_interactive.py  stream_agent_wrapper.py  tensorboard_callback.py  train.sbatch
v2/wandb/: latest-run
v2/wandb/run-20260311_180108-runs/: run-runs.wandb
v2/wandb/run-20260311_180108-runs/files/: requirements.txt  wandb-metadata.json
v2/wandb/run-20260311_180108-runs/files/code/v2/: baseline_fast_v2.py
v2/wandb/run-20260311_180108-runs/files/histogram/: events.out.tfevents.1773252074.slurm-rtx6000-244-175.183908.1
v2/wandb/run-20260311_180108-runs/files/poke_ppo_5/: events.out.tfevents.1773252074.slurm-rtx6000-244-175.183908.0
